<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InstaCount</string>
    <string name="title_section1">Gallery</string>
    <string name="title_section2">Camera</string>
    <string name="title_section3">Camera Real-Time</string>
    <string name="title_section4">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_reset_settings">Reset Settings</string>
    <string name="action_logout">Exit</string>

    <string name="default_min_distance">20</string>
    <string name="default_min_radius">20</string>
    <string name="default_max_radius">80</string>
    <string name="default_canny_threshold">50</string>
    <string name="default_accumulator_threshold">50</string>
    <string name="default_blur_size">5</string>

    <string name="max_min_distance">100</string>
    <string name="max_min_radius">100</string>
    <string name="max_max_radius">400</string>
    <string name="max_canny_threshold">200</string>
    <string name="max_accumulator_threshold">200</string>
    <string name="max_blur_size">40</string>

    <!-- Crop Page -->
    <string name="cp_info_text">Resize/Orient Image to Fit Area Inside the Orange Circle</string>
    <string name="cp_image_contentDesc">Image</string>
    <string name="cp_template_contentDesc">Shape</string>
    <string name="cp_change_img_contentDesc">Change Image</string>
    <string name="cp_crop_button">Crop Image</string>
    <string name="cp_template_button">Crop Shape</string>
    <string name="cp_detect_circles_contentDesc">Detect Circles</string>
    <string name="cp_clear_image_contentDesc">Clear Image</string>

    <!-- Select Dialog -->
    <string name="sd_select_template_text">Select Crop Shape</string>
    <string name="sd_icon_contentDesc">Shape Icons</string>

</resources>