<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:fab="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="false"
                android:focusableInTouchMode="true"
                android:screenOrientation="landscape"
                tools:context="us.lucidian.instacount.CropActivity">

    <TextView
        android:id="@+id/tv_circle_count"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@android:color/background_light"
        android:textColor="@android:color/primary_text_light"/>

    <FrameLayout
        android:id="@+id/image_center"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/tv_circle_count"
        android:layout_above="@+id/footer"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/cp_img"
            android:contentDescription="@string/cp_image_contentDesc"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="matrix" />

        <ImageView
            android:id="@+id/cp_face_template"
            android:contentDescription="@string/cp_template_contentDesc"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:src="@drawable/crop_square"
            android:scaleType="centerInside" />
    </FrameLayout>


    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/right_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        fab:fab_addButtonColorNormal="@color/white"
        fab:fab_addButtonColorPressed="@color/white_pressed"
        fab:fab_addButtonPlusIconColor="@color/half_black"
        fab:fab_expandDirection="up"
        fab:fab_size="mini"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_min_distance_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="mini"
            fab:fab_icon="@drawable/min_dist_down"
            fab:fab_colorNormal="@color/min_dist"
            fab:fab_colorPressed="@color/min_dist_pressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_min_distance_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="mini"
            fab:fab_icon="@drawable/min_dist_up"
            fab:fab_colorNormal="@color/min_dist"
            fab:fab_colorPressed="@color/min_dist_pressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_min_radius_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="mini"
            fab:fab_icon="@drawable/min_radius_down"
            fab:fab_colorNormal="@color/min_radius"
            fab:fab_colorPressed="@color/min_radius_pressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_min_radius_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="mini"
            fab:fab_icon="@drawable/min_radius_up"
            fab:fab_colorNormal="@color/min_radius"
            fab:fab_colorPressed="@color/min_radius_pressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_max_radius_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="mini"
            fab:fab_icon="@drawable/max_radius_down"
            fab:fab_colorNormal="@color/max_radius"
            fab:fab_colorPressed="@color/max_radius_pressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_max_radius_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="mini"
            fab:fab_icon="@drawable/max_radius_up"
            fab:fab_colorNormal="@color/max_radius"
            fab:fab_colorPressed="@color/max_radius_pressed"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>

    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/left_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        fab:fab_addButtonColorNormal="@color/white"
        fab:fab_addButtonColorPressed="@color/white_pressed"
        fab:fab_addButtonPlusIconColor="@color/half_black"
        fab:fab_expandDirection="up"
        fab:fab_size="mini"
        android:layout_marginBottom="45dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_blur_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="mini"
            fab:fab_icon="@drawable/blur_up"
            fab:fab_colorNormal="@color/blur"
            fab:fab_colorPressed="@color/blur_pressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_blur_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="mini"
            fab:fab_icon="@drawable/blur_down"
            fab:fab_colorNormal="@color/blur"
            fab:fab_colorPressed="@color/blur_pressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_canny_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="mini"
            fab:fab_icon="@drawable/canny_up"
            fab:fab_colorNormal="@color/canny"
            fab:fab_colorPressed="@color/canny_pressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_canny_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="mini"
            fab:fab_icon="@drawable/canny_down"
            fab:fab_colorNormal="@color/canny"
            fab:fab_colorPressed="@color/canny_pressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_accum_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="mini"
            fab:fab_icon="@drawable/accum_up"
            fab:fab_colorNormal="@color/accum"
            fab:fab_colorPressed="@color/accum_pressed"/>

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_accum_down"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_size="mini"
            fab:fab_icon="@drawable/accum_down"
            fab:fab_colorNormal="@color/accum"
            fab:fab_colorPressed="@color/accum_pressed"/>

    </com.getbase.floatingactionbutton.FloatingActionsMenu>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/footer"
        style="?android:attr/buttonBarStyle" >

        <ImageButton
            android:id="@+id/imageButton0"
            android:contentDescription="@string/cp_change_img_contentDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_camera"
            android:onClick="onCameraCaptureButton"/>

        <ImageButton
            android:id="@+id/imageButton1"
            android:contentDescription="@string/cp_change_img_contentDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_gallery"
            android:onClick="onChangeImageButton"/>

        <ImageButton
            android:id="@+id/imageButton2"
            android:contentDescription="@string/cp_crop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_crop"
            android:onClick="onCropImageButton"/>

        <ImageButton
            android:id="@+id/imageButton3"
            android:contentDescription="@string/cp_template_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_crop_shape"
            android:onClick="onChangeTemplateButton"/>

        <ImageButton
            android:id="@+id/imageButton4"
            android:contentDescription="@string/cp_detect_circles_contentDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_detect_circles"
            android:onClick="onDetectCirclesButton"/>

    </LinearLayout>

</RelativeLayout>